# ml_compe

./: .gitignore  Dockerfile  README.md  environment.yml  kaggle.json  pyproject.toml
signate/competition-1299/: final_submission.csv  predictions.csv  tf_idf_lightGBM_baseline_ipynb_のコピー.ipynb  wordcloud_sample.ipynb
signate/competition-1299/submission/: final_submission.csv
signate/医学論文の自動仕分けチャレンジ/: tf_idf_lightGBM_baseline_ipynb_のコピー.ipynb
src/ml_compe/: __init__.py
